--- a/views/drinks_show.ejs
+++ b/views/drinks_show.ejs
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinks</title>
+    <style>
+        img {
+            width: 300px;
+            height: 300px;
+            border-radius: 10%;
+            align-self: center;
+            box-shadow: 1px 1px 2px 1px #808080;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to gitPub</h1>
-    <ul>
-        <% for(let i = 0; i < allDrinks.length; i++) { %>
-            <li>
-                <a href="/drinks/<%=i%>"><%=allDrinks[i].name</a>
-            </li>
-            <% } %>
-    </ul>
+    <h1>At foor bar</h1>
+    <h2><%= drink.name %></h2>
+    <img src="<%= drink.image%>" alt="drink image">
+    <h3><%= drink.price %></h3>
+    <a href="/drinks">Back to Index</a>
 </body>
 </html>
