--- a/views/foods_index.ejs
+++ b/views/foods_index.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,12 +13,20 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to gitPub</h1>
     <h2>Drinks</h2>
     <ul>
         <% for(let i = 0; i < allDrinks.length; i++) { %>
-            <li id='drink'>
-                <a href="/drinks/<%=i%>"><%=allDrinks[i].name.charAt(0).toUpperCase() + allDrinks[i].name.slice(1) %></a>
+            <li>
+                <a href="#"><%=allDrinks[i].name.charAt(0).toUpperCase() + allDrinks[i].name.slice(1) %></a>
+            </li>
+            <br>
+        <% } %>
+    </ul>
+    <h2>Foods</h2>
+    <ul>
+        <% for(let i = 0; i < allFoods.length; i++) { %>
+            <li>
+                <a href="/foods/<%=i%>"><%=allFoods[i].name.charAt(0).toUpperCase() + allFoods[i].name.slice(1) %></a>
             </li>
             <br>
         <% } %>
