--- a/views/drinks_show.ejs
+++ b/views/drinks_show.ejs
@@ -16,6 +16,8 @@
         body {
             max-width: 300px;
             margin-left: 5%;
+            color: blanchedalmond;
+            background-color: steelblue;
         }
 
         img {
@@ -24,12 +26,13 @@
             border-radius: 10%;
             align-self: center;
             box-shadow: 1px 1px 2px 1px #808080;
+            background-image: url(`../images/drinkImage.png`);
         }
     </style>
 </head>
 
 <body>
-    <h1>At foot bar</h1>
+    <h1>At foo bar</h1>
     <h2><%= drink.name %></h2>
     <img src="<%= drink.image%>" alt="drink image">
     <h3><%= drink.price %></h3>
