--- a/views/foods_index.ejs
+++ b/views/foods_index.ejs
@@ -17,7 +17,7 @@
     <ul>
         <% for(let i = 0; i < allDrinks.length; i++) { %>
             <li>
-                <a href="#"><%=allDrinks[i].name.charAt(0).toUpperCase() + allDrinks[i].name.slice(1) %></a>
+                <a style='text-decoration: none;' href="#"><%=allDrinks[i].name.charAt(0).toUpperCase() + allDrinks[i].name.slice(1) %></a>
             </li>
             <br>
         <% } %>
