--- a/views/foods_show.ejs
+++ b/views/foods_show.ejs
@@ -7,12 +7,25 @@
     
     <title>Foods</title>
     <style>
+         header {
+            text-align: left;
+            margin: 2em;
+        }
+
+        body {
+            max-width: 300px;
+            margin-left: 5%;
+            color: blanchedalmond;
+            background-color: steelblue;
+        }
+
         img {
             width: 300px;
             height: 300px;
             border-radius: 10%;
             align-self: center;
             box-shadow: 1px 1px 2px 1px #808080;
+            background-image: url(`../images/foodImage.png`);
         }
     </style>
 </head>
