--- a/views/drinks_show.ejs
+++ b/views/drinks_show.ejs
@@ -34,7 +34,7 @@
 <body>
     <h1>At foo bar</h1>
     <h2><%= drink.name %></h2>
-    <img src="<%= drink.image%>" alt="drink image">
+    <img src="<%= drink.image%>.png" alt="drink image">
     <h3><%= drink.price %></h3>
     <a href="/drinks">Back to Index</a>
 </body>
