--- a/views/foods_show.ejs
+++ b/views/foods_show.ejs
@@ -25,14 +25,13 @@
             border-radius: 10%;
             align-self: center;
             box-shadow: 1px 1px 2px 1px #808080;
-            background-image: url(`../images/foodImage.png`);
         }
     </style>
 </head>
 <body>
 
     <h2><%= food.name %></h2>
-    <img src="<%= food.image%>" alt="food image">
+    <img src="<%= food.image%>png" alt="food image">
     <h3><%= food.price %></h3>
     <a href="/foods">Back to Index</a>
 </body>
