Add: content-type for image to png

--- a/views/foods_show.ejs
+++ b/views/foods_show.ejs
@@ -31,7 +31,7 @@
 <body>
 
     <h2><%= food.name %></h2>
-    <img src="<%= food.image%>png" alt="food image">
+    <img src="<%= food.image%>" alt="food image">
     <h3><%= food.price %></h3>
     <a href="/foods">Back to Index</a>
 </body>
