--- a/views/drinks_show.ejs
+++ b/views/drinks_show.ejs
@@ -26,7 +26,6 @@
             border-radius: 10%;
             align-self: center;
             box-shadow: 1px 1px 2px 1px #808080;
-            background-image: url(`../images/drinkImage.png`);
         }
     </style>
 </head>
@@ -34,7 +33,7 @@
 <body>
     <h1>At foo bar</h1>
     <h2><%= drink.name %></h2>
-    <img src="<%= drink.image%>.png" alt="drink image">
+    <img src="<%= drink.image%>" alt="drink image">
     <h3><%= drink.price %></h3>
     <a href="/drinks">Back to Index</a>
 </body>
